--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,13 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+output/
+benchmark/
+*.pyc
+*.tar
+*.csv
+checkpoint/
+*.out/
+benchmark/report.csv
+*.jpg
+*.png
