--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,2 @@
 [settings]
-known_third_party = PIL,autocfg,autogluon,cv2,matplotlib,numpy,pandas,requests,setuptools,timm,torch,torchvision,tqdm,yaml
+known_third_party = PIL,autocfg,autogluon,configuration,cv2,matplotlib,numpy,pandas,pynvml,requests,setuptools,timm,torch,torchvision,tqdm,yaml
